# kladdvara

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yaml
core/: Cargo.toml
core/terminals/native/: Cargo.toml
core/terminals/native/src/: main.rs
core/terminals/web/: Cargo.toml
core/terminals/web/src/: lib.rs
core/vm/src/: lib.rs
src/: main.rs
web/: package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.ts
web/public/: kladdkaka.avif
web/src/: index.html  index.ts  styles.css  terminal-theme.ts
