[package]
name = "kladdvara"
version = "0.1.0"
description = "🍰 my toy LC-3 VM"
authors = ["andrew sòlanto"]
license = "GPL-3.0-or-later"
repository = "https://github.com/solanto/kladdvara"
edition = "2024"

[dependencies]
crossterm = "0.29.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 's'
panic = "abort"
strip = true
